tests/ui/function_with_body.stderr
error: expected `;`
 --> tests/ui/function_with_body.rs:4:16
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         fn f() {}
  |                ^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
